style: landing fix mobile devices overflow and improve spacing (#413)

--- a/apps/xlayers/src/home/interactive-bg/interactive-bg.component.css
+++ b/apps/xlayers/src/home/interactive-bg/interactive-bg.component.css
@@ -4,7 +4,7 @@
 }
 
 section {
-  background-position: 50% 50%;
+  background-position: 50% 0;
   background-repeat: no-repeat;
   background-size: contain;
 }
